Adicionada a função de desvirar as cartas e alerta sobre o término do jogo.

--- a/estilos.css
+++ b/estilos.css
@@ -12,6 +12,10 @@ body{
     color: #75B79E;
     display: flex;
     flex-wrap: wrap; 
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    box-sizing: border-box;
     }
 
 .boxcartas{
